# wallpape.rs

./: Cargo.toml  readme.md
src/: from_url.rs  lib.rs  win.rs
src/linux/: lxde.rs
