[package]
name = "wallpaper"
version = "3.2.0"
edition = "2018"
authors = ["reujab <reujab@gmail.com>", "JohannesIBK <mail@greuter.dev>"]
description = "Gets and sets the desktop wallpaper/background."
repository = "https://github.com/johannesibk/wallpape.rs"
readme = "readme.md"
keywords = ["desktop", "wallpaper", "background"]
categories = ["api-bindings"]
license = "Unlicense"

[dependencies]
dirs = { version = "4.0.0", optional = true }
attohttpc = { version = "0.24.0", optional = true}

[target.'cfg(unix)'.dependencies]
enquote = "1"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
rust-ini = "0.18.0"
dirs = "4.0.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
winreg = "0.10.1"

[features]
from_url = ["dirs", "attohttpc"]
