[package]
name = "wallpape-rs"
version = "1.0.1"
edition = "2018"
authors = ["reujab <reujab@gmail.com>", "JohannesIBK <mail@greuter.dev>"]
description = "Gets and sets the desktop wallpaper/background."
repository = "https://github.com/johannesibk/wallpape.rs"
readme = "readme.md"
keywords = []
categories = ["api-bindings"]
license = "Unlicense"

[dependencies]
dirs = { version = "4.0.0", optional = true }
attohttpc = { version = "0.24.0", optional = true}

[target.'cfg(unix)'.dependencies]
enquote = "1.1.0"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
rust-ini = "0.18.0"
dirs = "4.0.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.43.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Registry"] }

[features]
from_url = ["dirs", "attohttpc"]
